<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swiperefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LocationFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/locationBacgroundView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/ic_prague"
                app:layout_constraintBottom_toTopOf="@+id/cv_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/wave"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/ic_wave"
                app:layout_constraintBottom_toBottomOf="@+id/locationBacgroundView" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="10 march"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PRAGUE"
                android:textColor="@color/white"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="@+id/tvDate"
                app:layout_constraintStart_toStartOf="@+id/tvDate"
                app:layout_constraintTop_toBottomOf="@+id/tvDate" />


            <TextView
                android:id="@+id/tvTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="18"
                android:textColor="@color/white"
                android:textSize="72sp"
                app:layout_constraintEnd_toEndOf="@+id/tvCityName"
                app:layout_constraintStart_toStartOf="@+id/tvCityName"
                app:layout_constraintTop_toBottomOf="@+id/tvCityName" />

            <TextView
                android:id="@+id/tvCelsius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="°C"
                android:textColor="@color/white"
                android:textSize="26sp"
                app:layout_constraintStart_toEndOf="@+id/tvTemperature"
                app:layout_constraintTop_toTopOf="@+id/tvTemperature" />


            <ImageView
                android:id="@+id/imgState"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_01d"
                app:layout_constraintBottom_toBottomOf="@+id/tvTemperature"
                app:layout_constraintStart_toEndOf="@+id/tvTemperature"
                app:layout_constraintTop_toTopOf="@+id/tvTemperature" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/crdPressure"
                        android:layout_width="0dp"
                        android:layout_height="105dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintBottom_toTopOf="@+id/crdHumidity"
                        app:layout_constraintEnd_toStartOf="@+id/crdWind"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_pressure" />

                            <TextView
                                android:id="@+id/tvPressure"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_pressure" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/crdWind"
                        android:layout_width="0dp"
                        android:layout_height="105dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintBottom_toBottomOf="@+id/crdPressure"
                        app:layout_constraintEnd_toStartOf="@+id/crdSunrise"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/crdPressure"
                        app:layout_constraintTop_toTopOf="@+id/crdPressure">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_wind" />

                            <TextView
                                android:id="@+id/tvWind"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_wind" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/crdSunrise"
                        android:layout_width="0dp"
                        android:layout_height="105dp"
                        android:layout_marginEnd="8dp"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintBottom_toBottomOf="@+id/crdWind"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/crdWind"
                        app:layout_constraintTop_toTopOf="@+id/crdWind">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_sunrise" />

                            <TextView
                                android:id="@+id/tvSunrise"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:text="8:25" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_sunrise" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/crdHumidity"
                        android:layout_width="0dp"
                        android:layout_height="105dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="72dp"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/crdVisibility"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_drops" />

                            <TextView
                                android:id="@+id/tvHumidity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_humidity" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/crdVisibility"
                        android:layout_width="0dp"
                        android:layout_height="105dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="132dp"
                        android:layout_marginEnd="8dp"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintBottom_toBottomOf="@+id/crdHumidity"
                        app:layout_constraintEnd_toStartOf="@+id/crdSunset"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/crdHumidity"
                        app:layout_constraintTop_toTopOf="@+id/crdHumidity"
                        app:layout_constraintVertical_bias="1.0">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_direction" />

                            <TextView
                                android:id="@+id/tvVisibility"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_visibility" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/crdSunset"
                        android:layout_width="0dp"
                        android:layout_height="105dp"
                        android:layout_marginEnd="8dp"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintBottom_toBottomOf="@+id/crdVisibility"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/crdVisibility"
                        app:layout_constraintTop_toTopOf="@+id/crdVisibility"
                        app:layout_constraintVertical_bias="0.0">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_sunrise" />

                            <TextView
                                android:id="@+id/tvSunset"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:text="19:10" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_sunset" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/locationLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ProgressBar>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
